# MuxVizPy

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-muxvizpyXbioinformatics.md
docs/superpowers/specs/: 2026-03-31-muxvizpyXbioinformatics-design.md
experiments/: core.py
runners/: profiler.py
scripts/: test.py
scripts/example_data/: metadata.csv
scripts/example_data/VirusA/: edges.csv  nodes.csv
scripts/example_data/VirusB/: edges.csv  nodes.csv
scripts/example_data/VirusC/: edges.csv  nodes.csv
src/MuxVizPy/: __init__.py  build.py  core.py  decomposition.py  global.py  global_descriptors.py  information.py  leading_eigenv_approx.py  mesoscale.py  percolation.py  plotMux.py  topology.py  versatility.py  visualization.py
src/MuxVizPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/MuxVizPy/utils/: __init__.py  approx_utils.py  decomposition_utils.py  io.py  katz_utils.py  misc.py  parsing.py
src/muxvizpy/: __init__.py
tests/: conftest.py  test_decomposition.py  test_global_descriptors.py  test_information.py  test_mesoscale.py  test_profiler.py  test_topology.py  test_utils_io.py  test_utils_parsing.py  test_utils_parsing_build.py  test_versatility.py
