[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MuxVizPy"
version = "1.0.0"
description = "A multilayer network analysis library inspired by MuxViz, using graph-tool and scientific Python"
authors = [
  { name="Francesco Zambelli" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["networks", "graph-tool", "multilayer", "multiplex", "centrality", "network science"]

dependencies = [
  "numpy >= 1.21",
  "scipy >= 1.7",
  "pandas >= 1.3",
  "matplotlib >= 3.4",
  "tqdm >= 4.60"
  # graph-tool should be installed manually; mention this in README
]

[project.urls]
Homepage = "https://github.com/CoMuNeLab/MuxVizPy"
Repository = "https://github.com/CoMuNeLab/MuxVizPy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["MuxVizPy"]
